--- a/Drill.html
+++ b/Drill.html
@@ -26,7 +26,7 @@
   
   <div id="block">
 
-  <h1>Arithmetic Equation Game</h1>
+  <h1>Math Drill</h1>
   <div id="equation"></div>
   <label for="userAnswer">Enter your answer:</label>
   <input type="text" id="userAnswer">
